--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,6 @@
 {
-  "name": "worker-name",
+  // wrangler.jsonc
+  "name": "bubbles",
   "compatibility_date": "2026-02-10",
   "assets": {
   "directory": "./dist"
