--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,6 +3,6 @@
   "name": "bubbles",
   "compatibility_date": "2026-02-10",
   "assets": {
-  "directory": "./dist"
+  "directory": "./public"
   }
 }
